[project]
name = "planning-agent-demo"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "langchain>=0.3.25",
    "langchain-community>=0.3.23",
    "langchain-ollama>=0.3.2",
    "pydantic>=2",
    "pyparsing>=3.2.3",
]

[project.optional-dependencies]
dev = [
    "ipython>=9.2.0",
    "pytest>=8.3.5",
]
